[update] angular 4 README

--- a/web-framework/contents/angular/contents/4.md
+++ b/web-framework/contents/angular/contents/4.md
@@ -28,7 +28,7 @@
    ```
    对应的javascript结构：
     ```javascript
-        angular.module('myApp',[]);
+    angular.module('myApp',[]);
     ```
 	备注： 如果给`ng-App` 赋值如：`ng-app='myApp'`，那么必须要在js中初始化，如： `angular.module('myApp',[])` ， 不然会报错。
 
@@ -92,10 +92,10 @@
         ```
 
 - <font size=4>ngRepeat 指令</font>
-    ng-repeat 指令用来遍历一个数组重复创建当前元素
-    类似于模板引擎中的each
-    [官方的例子](http://docs.angularjs.cn/api/ng/directive/ngRepeat)涉及的东西很多
-    举个简单的实例：
+    * ng-repeat 指令用来遍历一个数组重复创建当前元素
+    * 类似于模板引擎中的each
+    * [官方的例子](http://docs.angularjs.cn/api/ng/directive/ngRepeat)涉及的东西很多
+    * 举个简单的实例：
         html结构
         ```html
         <div ng-app='myApp'>
@@ -122,16 +122,16 @@
     * 简单自己来写一写：
     css结构
     ```css
-        .red {color: red}
+    .red {color: red}
     ```
 	html结构
     ```html
     <div ng-app='myApp'>
         <div ng-controller='myCtrl'>
-                <input type='text' placeholder='type your name' ng-model='typedName'>
-                <div ng-repeat='item in data' ng-class='{red: typedName && item.name.startsWith(typedName)}'>
-                    <span ng-bind='item.name'></span>
-                </div>
+            <input type='text' placeholder='type your name' ng-model='typedName'>
+            <div ng-repeat='item in data' ng-class='{red: typedName && item.name.startsWith(typedName)}'>
+                <span ng-bind='item.name'></span>
+            </div>
         </div>
     </div>
     ```
@@ -144,7 +144,8 @@
         { id: 4, name: '周明', age: 14, gender: 0 },
         { id: 5, name: '周玥', age: 23, gender: 1 },
         { id: 6, name: 'johnny', age: 24, gender: 0 }
-        ];
+    ];
+
     angular.module('myApp',[])
         .controller('myCtrl', ['$scope', function($scope) {
             $scope.typedName = '';
@@ -173,7 +174,7 @@
             <script>alert('block!')</script>
             <div>{{user.gender}}</div>
         </div>
-        </div>
+    </div>
     ```
     javascript结构
     ```javascript
@@ -204,7 +205,7 @@
 - <font size=4>ngIf 指令</font>
     * ngIf指令完全不同于ngShow或者ngHide ，它控制的是:是否有这个dom元素，而非显示隐藏。
     * 举个小例子
-    关键代码：
+    * 关键代码：
     ```html
     Click: <input type='checkbox' ng-model='checked' ng-init='checked=true' />
     <span ng-if="checked">控制有还是没有</span>
@@ -217,29 +218,29 @@
     * on 属性必须和ng-switch一起使用，或者直接使用ng-switch属性。
     * 此指令优先级很高
     * 官网上的小demo分析
-        html结构
+    * html结构
         ```html
-            <div ng-app='myApp'>
-                <div ng-controller='myCtrl'>
-                    <select ng-model='selection' ng-options='item for item in items'>
-                    </select>
-                    <tt>selection={{selection}}</tt>
-                    <hr/>
-                    <div ng-switch on='selection'>
-                        <div ng-switch-when='settings'>Settings Div</div>
-                        <div ng-switch-when='home'>Home Span</div>
-                        <div ng-switch-default>default</div>
-                    </div>
+        <div ng-app='myApp'>
+            <div ng-controller='myCtrl'>
+                <select ng-model='selection' ng-options='item for item in items'>
+                </select>
+                <tt>selection={{selection}}</tt>
+                <hr/>
+                <div ng-switch on='selection'>
+                    <div ng-switch-when='settings'>Settings Div</div>
+                    <div ng-switch-when='home'>Home Span</div>
+                    <div ng-switch-default>default</div>
                 </div>
+            </div>
         </div>
         ```
         javascript结构
         ```javascript
         angular.module('myApp',[])
-            .controller('myCtrl', ['$scope', function($scope) {
-                $scope.items = ['settings', 'home', 'other'];
-                $scope.selection = $scope.items[0];
-            }]);
+        .controller('myCtrl', ['$scope', function($scope) {
+            $scope.items = ['settings', 'home', 'other'];
+            $scope.selection = $scope.items[0];
+        }]);
         ```
     * 上面用了ng-option的一个遍历循环。
     * 在 ng-switch作用上的父盒子上动态的绑定了option里的值，只要选择有匹配那么在下面的子盒子就会相应的显示。其中可以使用on或者不使用on，但是ng-switch是必备的，直接用`ng-switch='selection'` 也可以。
@@ -289,9 +290,9 @@
     * scope ： 规范指令的作用域的问题，如果没写，ng中默认的是放在根作用域中的，一般每个控制器就会有一个作用域，每个指令也会存在一个作用域，并且作用域存在继承关系，我们为了规范作用域，可以在自定义指令中有一个scope选项，在scope内部定义一些属性。下面是示例代码。
         html结构：
         ```html
-            <div ng-app='myApp'>
-                <haha title='hello' data='world'></haha>
-            </div>
+        <div ng-app='myApp'>
+            <haha title='hello' data='world'></haha>
+        </div>
         ```
         javascript结构：
         ```javascript
