[update] angular 6 README

--- a/web-framework/contents/angular/contents/6.md
+++ b/web-framework/contents/angular/contents/6.md
@@ -4,10 +4,10 @@
 
 #### 方式一 ：使用 provider
 
-html结构:
-```html
-<div ng-app="starter" ng-controller="myCtrl"></div>
-```
+- html结构:
+    ```html
+    <div ng-app="starter" ng-controller="myCtrl"></div>
+    ```
 
 - 通过module的第三个参数，注入`$provide` 和使用 `$get`来实现
   * js结构 : 
@@ -29,14 +29,13 @@ html结构:
 	module.controller("myCtrl", ["myProvider", function(myProvider){
 		console.log(myProvider); // 可以获取到数据
 	}])
-	
 	```
 
 - 通过config配置来实现
-  * js 代码：
+
+    * js 代码：
     ```javascript
 	var module = angular.module("starter",[]);
-	
 	module.config(function($provide){
 		$provide.provider("myProvider2",function(){
 			this.$get = function(){
@@ -44,7 +43,6 @@ html结构:
 			}
 		});
 	});
-
 	module.controller("myCtrl", ["myProvider2", function(myProvider2){
 		console.log(myProvider2); // 可以获取到数据 myProvider2
 	}])
@@ -52,7 +50,7 @@ html结构:
 
 - 直接使用 `.` 以后推荐这个，方便！
 
- * js代码：
+    * js代码：
 	```javascript
 	var module = angular.module("starter",[]);
 	
@@ -74,7 +72,7 @@ html结构:
 
 #### 方式二 ：使用 factory
 
-使用相同的html结构
+- 使用相同的html结构
 
 - js代码：
 	```javascript
@@ -86,33 +84,28 @@ html结构:
 			name:"我是factory"
 		}
 	});
-	
 	module.controller("myCtrl", ["myFactory", function(myFactory){
 		console.log(myFactory); // 可以获取到数据 myFactory
 	}])
-	
 	```
 
 #### 方式三 ： 使用 service
 
-相同的html结构
+- 相同的html结构
 
 - js代码
 
 	```javascript
 	var module = angular.module("starter",[]);
-	
 	module.service("myService",function(){
 	    // 使用factory ，不必使用 $get了。
 		return {
 			name:"myservice"
 		}
 	});
-	
 	module.controller("myCtrl", ["myService", function(myService){
 		console.log(myService); // 可以获取到数据 myService
 	}])
-	
 	```
 
 > **<font color='#666'>总结</font>**：
