[update] angular 6 README

--- a/web-framework/contents/angular/contents/6.md
+++ b/web-framework/contents/angular/contents/6.md
@@ -24,7 +24,6 @@
 			}
 		});
 	});
-	
 	/* 在controller 中注入我们定义的服务 */
 	module.controller("myCtrl", ["myProvider", function(myProvider){
 		console.log(myProvider); // 可以获取到数据
@@ -32,7 +31,6 @@
 	```
 
 - 通过config配置来实现
-
     * js 代码：
     ```javascript
 	var module = angular.module("starter",[]);
@@ -48,8 +46,7 @@
 	}])
    ```
 
-- 直接使用 `.` 以后推荐这个，方便！
-
+- 直接使用 $ `.` 以后推荐这个，方便！
     * js代码：
 	```javascript
 	var module = angular.module("starter",[]);
@@ -61,11 +58,9 @@
 			}
 		}
 	});
-	
 	module.controller("myCtrl", ["myProvider", function(myProvider){
 		console.log(myProvider); // 可以获取到数据 myFactory
 	}])
-	
    ```
 
 -  当然，如果return的是一个对象，那么我们可以在对象里面做很多事情，比如定义set和get方法等。
