[update] golang 3 README

--- a/golang/contents/3.md
+++ b/golang/contents/3.md
@@ -1,7 +1,8 @@
 学习笔记根据 [无闻](https://github.com/Unknwon) [go语言基础教程](https://github.com/Unknwon/go-fundamental-programming) 整理
 
 ### __批量定义常量__
-```
+
+```golang
 const (
     PI = 3.14
     c1 = 1
@@ -9,10 +10,12 @@ const (
     c3 = 3
 )
 ```
+
 其中大写的外部可调用，小写的不可调用
 
 ### __批量定义变量__
-```
+
+```golang
 var (
     name = "n1"
     age = 10
@@ -20,7 +23,8 @@ var (
 ```
 
 ### __批量声明一般类型__
-```
+
+```golang
 type(
     newType int
     type1 float32
@@ -80,7 +84,7 @@ type(
  - 零值并不等于空值，而是当变量被声明为某种类型后的默认值
 
  - 通常情况下，值类型默认值为0， bool为false, string为空字符串，关键代码如下：
-  ```
+  ```golang
    var a int
    var b int32
    var c float32
@@ -104,14 +108,14 @@ type(
 
 ### __内置的类的静态常量__
 
-```
+```golang
  fmt.Println(math.MinInt8) // -128
  fmt.Println(math.MaxInt32) // 2147483647
 ```
 
 ### __类型的别名__
 
-```
+```golang
 type(
     我是自定义string string // 此处给string 自定义别名
 )
@@ -134,7 +138,7 @@ func main() {
 ### __多个变量的声明与赋值__
 
 - 全局变量的声明可使用var()的方式进行简写，如：
- ```
+ ```golang
  var (
 	    a = "hello"
 	    b,c = 1,5
@@ -143,7 +147,8 @@ func main() {
  ```
 
 - 全局变量的声明不可以省略var, 但可用并行方式
- ```
+
+ ```golang
  var a,b,c,d int = 1,2,3,4
  fmt.Println(a) // 1
  fmt.Println(b) // 2
@@ -151,8 +156,9 @@ func main() {
  fmt.Println(d) // 4
  ```
 - 所有变量都可以使用类型推断
+
 - 局部变量不可以使用var()的方式简写，只能使用并行方式
- ```
+ ```golang
  e,f,g,h := 1,2,3,4
  fmt.Println(e) // 1
  fmt.Println(f) // 2
@@ -161,7 +167,7 @@ func main() {
  ```
 
 - `:=` 的方式多用于函数有多个返回值时进行赋值或并行赋值忽略某项时使用,如：
- ```
+ ```golang
   a, _, c,d = 1,2,3,4 // 使用 _ 来忽略其中的一项
   fmt.Println(a) // 1
   fmt.Println(d) // 3
@@ -172,8 +178,9 @@ func main() {
 ### __变量的类型转换__
 
 -  go 中不存在隐式转换，所有类型转换必须显式声明
+
 - 转换只能发生在两种相互兼容的类型之间, 布尔类型不可以和数字进行转换
- ```
+ ```golang
    import (
     "fmt"
     "strconv"
@@ -191,7 +198,7 @@ func main() {
 
  ```
 - 类型的转换格式：`<ValueA> [:]= <TypeOfValueA> (<ValueB>)` 而可选项 `:` 在变量未在上文定义的时候使用。
- ```
+ ```golang
  var a float32 = 1.1
  b := int(a)
  fmt.Println(a) // 1.1
