[update] golang 4 README

--- a/golang/contents/4.md
+++ b/golang/contents/4.md
@@ -7,7 +7,7 @@
 - 等号右侧必须是常量或者常量的表达式
 - 常量的表达式中的函数必须是内置函数
 - 示例：
- ```
+ ```golang
  const a int = 1
  const b = 'A'
 
@@ -23,8 +23,9 @@
 ### __常量的初始化规则与枚举__
 
 - 在定义常量组时，如果不提供初始值，则表示将使用上行的表达式
+
 - 使用相同的表达式不代表具有相同的值
- ```
+ ```golang
  import (
 	 	"fmt"
  )
@@ -58,7 +59,7 @@
 - iota是常量的计数器，从0开始，组中每定义1个常量自动递增1
 - 通过初始化规则与iota可以达到枚举的效果
 - 每遇到一个const关键字， iota就会重置为0
- ```
+ ```golang
  import (
 	 	"fmt"
  )
@@ -90,11 +91,10 @@
 ### __私有常量的定义__
 - 如果不想被外部访问到，需要使用 `_` 或 `c` ，如下所示：
 
-  ```
- const (
-	 	MAX_SIZE = 10 // 可以被外部调用
-	 	_TEST = "ST" // 不可被外部调用
-	 	cTEST2 = "ST2" // 不可被外部调用
- )
-
+  ```golang
+    const (
+            MAX_SIZE = 10 // 可以被外部调用
+            _TEST = "ST" // 不可被外部调用
+            cTEST2 = "ST2" // 不可被外部调用
+    )
   ```
