--- a/python/contents/50.md
+++ b/python/contents/50.md
@@ -28,7 +28,7 @@
     * 参数`unverifiable` 指的是这个请求是否是无法验证的，默认是`False`, 意思是用户没有足够权限来选择接受这个请求的结果
     * 参数`method`是一个字符串，用来指示请求使用的方法，如：`GET`、`POST`、`PUT`等
 
-### 使用urllib模块来爬取数据示例
+### 使用urllib.request模块来爬取数据示例
 
 ```python
 import urllib.request
@@ -42,4 +42,80 @@ html = res.read().decode("utf-8")
 
 dlist = re.findall("<title>(.*?)</title>", html)
 print(dlist) # ['百度一下，你就知道']
+```
+
+### 使用urllib.request.Request模块进行请求封装示例
+
+```python
+import urllib.request
+import re
+
+url = 'http://news.baidu.com/';
+
+# 伪装浏览器用户
+headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.103 Safari/537.36'}
+req = urllib.request.Request(url, headers=headers) # 封装请求对象
+res = urllib.request.urlopen(req) # 执行请求获取响应信息 通过封装对象
+# res = urllib.request.urlopen(url) # 执行请求获取响应信息 直接通过url
+html = res.read().decode('utf-8') # 从响应对象中读取信息并解码
+pat = '<a href="(.*?)" .*? target="_blank">(.*?)</a>' # 使用正则解析新闻标题
+
+dlist = re.findall(pat, html)
+
+for v in dlist:
+    print(v[1] + ' : ' + v[0])
+
+```
+
+### 爬虫的异常处理
+
+- 在爬虫运行时，经常会出现异常，若不进行处理则会因报错而终止运行
+- `urllib.error` 可接收有`urllib.request`产生的异常。它有两个类，`URLError` 和 `HTTPError`
+    * URLError内有一个属性：reason 返回错误原因
+    * HTTPError内有三个属性： code 返回状态码，reason返回错误原因，headers返回请求头
+- `URLError` 是 `OSError` 的一个子类，`HTTPError` 是 `URLError`的一个子类
+- 错误处理: 在容易出错的位置，添加 try 块
+
+方式1 (按错误类型分别处理)：
+
+```python
+from urllib import request, error
+
+url = 'https://avatar.csdn.net/x/y/sdsds.jpg'
+req = request.Request(url)
+try:
+    res = request.urlopen(req)
+    html = res.read().decode('utf-8') # 此处二进制内容转换为utf8的内容
+    print(len(html))
+# HTTPError 要在 URLError 之后
+except error.HTTPError as e:
+    print('HTTPError')
+    print(e.reason)
+    print(e.code)
+except error.URLError as e:
+    print('URLError')
+    print(e.reason)
+
+```
+
+方式2 (开发中经常采用这种方式, 统一处理):
+
+```python
+from urllib import request, error
+
+url = 'https://avatar.csdn.net/x/y/sdsds.jpg'
+req = request.Request(url)
+try:
+    res = request.urlopen(req)
+    html = res.read().decode('utf-8')
+    print(len(html))
+# HTTPError 要在 URLError 之后
+except Exception as e:
+    if hasattr(e, "code"):
+        print("HTTPError")
+        print(e.reason)
+        print(e.code)
+    elif hasattr(e, "reason"):
+        print("URLError")
+        print(e.reason)
 ```
