update: python 53.md

--- a/python/contents/53.md
+++ b/python/contents/53.md
@@ -302,7 +302,6 @@ print(doc("title"))
 '''
 
 doc = pq(filename='index.html', encoding="utf-8")
-print(doc('title')) # 
 
 print(doc('title')) # 通过html标签名获取元素节点
 print(doc('#title'))  # 获取id属性值为title的元素节点
@@ -336,9 +335,9 @@ print("=" * 10)
 # 遍历：
 alist = doc("a")
 for a in alist.items():
-    print(a.attr.href)
+    print(a.attr.href) # 获取href属性
     #print(a.attr('href')) #同上
-    print(a.text())  #获取内容
-    print(a.html()) 
+    print(a.text())  # 获取文本内容
+    print(a.html()) # 获取html内容
 
 ```
