update: python 57.md

--- a/python/contents/57.md
+++ b/python/contents/57.md
@@ -61,6 +61,7 @@ from PIL import Image
 image = Image.open("./pic/2.png")
 # 1) 灰度处理 (将图像转化为灰色)
 image = image.convert("L")
+# image.save("./pic/2-1.png", None) # 此处用于保存转换后的图片进行对比测试
 
 # 2) 二值化处理 (将图像转化为黑白色)
 threshold = 128
@@ -71,6 +72,7 @@ for i in range(256):
     else:
         table.append(1)
 image = image.point(table,'1')
+# image.save("./pic/2-2.png", None) # 此处用于保存转换后的图片进行对比测试
 
 # 将图像转化为文本
 result = tesserocr.image_to_text(image)
