update: python 57.md

--- a/python/contents/57.md
+++ b/python/contents/57.md
@@ -6,27 +6,23 @@
 
 在安装`tesserocr`前都需要先安装`tesseract`
 
-1) Mac 环境 (默认是python3的环境)
-- $`pip3 install tesserocr`
-- $`pip3 install pillow`
+- Mac 环境 (默认是python3的环境)
+	- $`pip3 install tesserocr`
+	- $`pip3 install pillow`
+	- 注意：在mac下安装tesserocr ，需要先安装下面的软件
+	- $ `brew install tesseract`
+	- $ `brew install imagemagick`
 
-注意：
-在mac下安装tesserocr ，需要先安装下面的软件
-$ `brew install tesseract`
-$ `brew install imagemagick`
+- Ubuntu、Debian 系统下先安装：
+	- $ `sudo apt-get intall -y tesseract-ocr libtesseract-dev libleptonica-dev`
 
-2) Ubuntu、Debian 系统下先安装：
-$ `sudo apt-get intall -y tesseract-ocr libtesseract-dev libleptonica-dev`
+- CentOS、Red Hat 系统：
+	- $ `yum install -y tesseract`
 
-3) CentOS、Red Hat 系统：
-
-$ `yum install -y tesseract`
-
-4) 在windows系统下
-
-- tesserocr前要先安装：tesseract 他是为tesserocr提供支持的
-- 下载目录：https://digi.bib.uni-mannheim.de/tesseract/ 会有很多下载文件，下载一个3.0版本的exe文件即可
-- 在安装中要勾选上Additional language data(download)选项来安装OCR识别支持的语言包
+- 在windows系统下：
+	- tesserocr前要先安装：tesseract 他是为tesserocr提供支持的
+	- 下载目录：https://digi.bib.uni-mannheim.de/tesseract/ 会有很多下载文件，下载一个3.0版本的exe文件即可
+	- 在安装中要勾选上Additional language data(download)选项来安装OCR识别支持的语言包
 
 ### 简单使用
 
