update: python 57.md

--- a/python/contents/57.md
+++ b/python/contents/57.md
@@ -34,7 +34,7 @@ import tesserocr
 from PIL import Image
 
 # 打开图片 注意测试时你的路径保持和你的环境一致(图片位置正确)
-image = Image.open("./screenshot/1.png") # 之后测试时分别替换为: 2.png、3.png、4.png 等其他测试图像
+image = Image.open("./xx/1.png") # 之后测试时分别替换为: 2.png、3.png、4.png 等其他测试图像
 
 # 进行转换
 result = tesserocr.image_to_text(image)
@@ -54,7 +54,7 @@ print(result)
 import tesserocr
 from PIL import Image
 
-image = Image.open("./pic/2.png")
+image = Image.open("./xx/2.png") # 保证正确的路径
 # 1) 灰度处理 (将图像转化为灰色)
 image = image.convert("L")
 # image.save("./pic/2-1.png", None) # 此处用于保存转换后的图片进行对比测试
