--- a/python/contents/59.md
+++ b/python/contents/59.md
@@ -4,7 +4,7 @@
 - Scrapy用途广泛，可以用于数据挖掘、监测和自动化测试。
 - Scrapy吸引人的地方在于它是一个框架，任何人都可以根据需求方便的修改。它也提供了多种类型爬虫的基类，如BaseSpider、sitemap爬虫等，最新版本又提供了web2.0爬虫的支持。
 
-### Scrapy框架的架构图与运行原理及各个组件
+### Scrapy框架的架构图、运行原理及各个组件的介绍
 
 1）架构图：
 
