update: python 60.md

--- a/python/contents/60.md
+++ b/python/contents/60.md
@@ -123,7 +123,7 @@ scrapy shell http://www.baidu.com
 5. 通过名称指定运行爬取信息 $ `scrapy crawl`
 6. 使用shell进入scrapy交互环境 $ `scrapy shell`
 
-### scrapy的应用实践
+### scrapy的应用实践之Get请求获取5i5j楼盘数据信息
 
 1) 具体步骤
 
@@ -266,15 +266,58 @@ class FangSpider(scrapy.Spider):
 
 2）注意事项
 
-- 如果项目运行不起来，建议根据错误信息进行项目配置，常见的处理方式是
+- ①、如果项目运行不起来，建议根据错误信息进行项目配置，常见的处理方式是
 
 在settings中添加或开启
 
 ```config
 HTTPERROR_ALLOWED_CODES = [403]
 USER_AGENT = 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 Safari/537.36'
-ROBOTSTXT_OBEY = True
+ROBOTSTXT_OBEY = False
 ITEM_PIPELINES = {
     'sp_pro1.pipelines.SpPro1Pipeline': 300,
 }
 ```
+
+- ②、以上处理形式基于当时的技术，存在时效性，仅供学习参考
+
+### scrapy的应用实践之Post请求处理
+
+- 在Scrapy框架中默认都是GET的提交方式，但是我们可以使用FormRequest来完成POST提交，并可以携带参数。
+
+- 如下案例为有道词典的翻译信息爬取案例，网址：http://fanyi.youdao.com/translate?smartresult=dict&smartresult=rule
+
+- 首先创建一个youdao有道的爬虫文件：$ `scrapy genspider youdao fanyi.youdao.com`
+
+- 编写爬虫文件，注意返回的是json格式，具体代码如下：
+
+```python
+# -*- coding: utf-8 -*-
+import scrapy,json
+
+class YoudaoSpider(scrapy.Spider):
+    name = 'youdao'
+    allowed_domains = ['fanyi.youdao.com']
+    #start_urls = ['http://fanyi.youdao.com']
+
+    def start_requests(self):
+        url = 'http://fanyi.youdao.com/translate?smartresult=dict&smartresult=rule'
+        keyword = input("请输入要翻译的单词：")
+        data = {'i':keyword,'doctype': 'json',}
+        # FormRequest 是Scrapy发送POST请求的方法
+        yield scrapy.FormRequest(
+            url = url,
+            formdata = data,
+            callback = self.parse
+        )
+
+    def parse(self, response):
+        res = json.loads(response.body) # 处理json数据
+        print(res['translateResult'][0][0]['tgt'])
+        input("按任意键继续")
+```
+
+注意事项：
+
+1. 如果不写`start_urls`属性, 那么`start_requests`方法会自动被调用
+2. 
